--- a/addons/resource.language.en_gb/resources/strings.po
+++ b/addons/resource.language.en_gb/resources/strings.po
@@ -6870,7 +6870,12 @@ msgctxt "#13557"
 msgid "Skip delay"
 msgstr ""
 
-#empty strings from id 13558 to 13599
+#: system/settings/settings.xml
+msgctxt "#13558"
+msgid "Adjust display resolution"
+msgstr ""
+
+#empty strings from id 13559 to 13599
 
 #: system/settings/darwin.xml
 msgctxt "#13600"
@@ -16993,7 +16998,11 @@ msgctxt "#36171"
 msgid "Select the zoom level that 4:3 videos are shown on widescreen displays."
 msgstr ""
 
-#empty string with id 36172
+#. Description of setting "Videos -> Playback -> Adjust display resolution" with label #13558
+#: system/settings/settings.xml
+msgctxt "#36172"
+msgid "Allow the resolution of the display to be changed so that it best matches the video resolution."
+msgstr ""
 
 #. Description of setting with label #14109 "Short date format"
 #: system/settings/settings.xml
