--- a/addons/resource.language.en_gb/resources/strings.po
+++ b/addons/resource.language.en_gb/resources/strings.po
@@ -8835,7 +8835,13 @@ msgctxt "#16336"
 msgid "IMX - Advanced"
 msgstr ""
 
-#empty strings from id 16337 to 16399
+#. Description of OSD video settings for deinterlace method with label #16337
+#: xbmc/video/dialogs/GUIDialogVideoSettings.cpp
+msgctxt "#16337"
+msgid "IMX - Weave"
+msgstr ""
+
+#empty strings from id 16338 to 16399
 
 #: xbmc/video/dialogs/GUIDialogVideoSettings.cpp
 msgctxt "#16400"
