--- a/addons/resource.language.en_gb/resources/strings.po
+++ b/addons/resource.language.en_gb/resources/strings.po
@@ -8832,16 +8832,22 @@ msgstr ""
 #. Description of OSD video settings for deinterlace method with label #16336
 #: xbmc/video/dialogs/GUIDialogVideoSettings.cpp
 msgctxt "#16336"
-msgid "IMX - Advanced"
+msgid "IMX - Weave (half)"
 msgstr ""
 
 #. Description of OSD video settings for deinterlace method with label #16337
 #: xbmc/video/dialogs/GUIDialogVideoSettings.cpp
 msgctxt "#16337"
+msgid "IMX - Advanced"
+msgstr ""
+
+#. Description of OSD video settings for deinterlace method with label #16338
+#: xbmc/video/dialogs/GUIDialogVideoSettings.cpp
+msgctxt "#16338"
 msgid "IMX - Weave"
 msgstr ""
 
-#empty strings from id 16338 to 16399
+#empty strings from id 16339 to 16399
 
 #: xbmc/video/dialogs/GUIDialogVideoSettings.cpp
 msgctxt "#16400"
